# drip-tags-to-mailerlite-groups

./: .gitignore  create-groups.py  pyproject.toml  readme.md  requirements.txt
